--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -21,37 +21,38 @@ time, mark, audio, video, input{
   font-size: 100%;
   font-weight: normal;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, menu, nav, section{
-  display: block
+  display: block;
 }
 body{
-  line-height: 1
+  line-height: 1;
 }
 blockquote, q{
-  quotes: none
+  quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after{
-  content: none
+  content: none;
 }
 table{
   border-collapse: collapse;
-  border-spacing: 0
+  border-spacing: 0;
 }
 /* custom */
 
 a{
   color: #7e8c8d;
   -webkit-backface-visibility: hidden;
-  text-decoration: none
+  text-decoration: none;
 }
 li{
-  list-style: none
+  list-style: none;
 }
 body{
   -webkit-text-size-adjust: none;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0)
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
